[package]
name = "breezy"
version = { workspace = true }
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2018"
publish = false
default-run = "brz"
license = "GPL-2.0+"
description = "Friendly distributed version control system"
repository = "https://code.launchpad.net/brz"
homepage = "https://www.breezy-vcs.org/"
documentation = "https://www.breezy-vcs.org/doc/"

[workspace]
members = ["lib-rio"]

[workspace.package]
version = "3.3.8"

[[bin]]
name = "brz"
path = "breezy/main.rs"

[dependencies]
pyo3 = { workspace = true }

[workspace.dependencies]
pyo3 = ">=0.21,<0.22"
