[metadata]
name = breezy
maintainer = Breezy Developers
maintainer_email = team@breezy-vcs.org
description = Friendly distributed version control system
long_description = file:README.rst
version = attr:breezy.__version__
license = GNU GPL v2
download_url = https://launchpad.net/brz/+download
url = https://www.breezy-vcs.org/
classifiers =
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: C
    Topic :: Software Development :: Version Control

[options]
# rust extensions are not zip safe, just like C-extensions.
zip_safe = False
packages = find:
install_requires =
    configobj
    fastbencode
    patiencediff
    merge3
    # Technically, Breezy works without these two dependencies too. But there's
    # no way to enable them by default and let users opt out.
    dulwich>=0.20.23
    urllib3>=1.24.1
    pyyaml
tests_require =
    testtools
    python-subunit
    dulwich>=0.20.29
python_requires = >=3.7
setup_requires =
    setuptools>=60
    setuptools-rust
    setuptools-gettext
    cython>=0.29

[options.packages.find]
include = breezy*

[options.extras_require]
cext = cython>=0.29
fastimport = fastimport
git = dulwich>=0.20.23
launchpad = launchpadlib>=1.6.3
workspace = pyinotify
doc =
    setuptools
    sphinx
    sphinx_epytext
pgp = gpg

[flake8]
# Ignore E402 ("module level import not at top of file"),
# because even with the lazy import plugin it still triggers
# for lazy_import statements before other imports.
exclude = .git,__pycache__,build,dist,target
ignore =
   D
   I
   E12
   E261
   E265
   E266
   E301
   E302
   E303
   E305
   E306
   E401
   E402
   E501
   E502
   E702
   E704
   E722
   E731
   E741
   F401
   F402
   F403
   F405
   F811
   F812
   F821
   F841
   W391
   W503
   W504
   W605
filename = *.py

[flake8:local-plugins]
extension =
	MC1 = flake8_lazy_import:LazyImport
paths = ./tools/

[options.package_data]
# install files from selftest suite
breezy =
    doc/api/*.txt
    tests/test_patches_data/*
    help_topics/en/*.txt
    tests/ssl_certs/ca.crt
    tests/ssl_certs/server_without_pass.key
    tests/ssl_certs/server_with_pass.key
    tests/ssl_certs/server.crt
