[flake8]
exclude = build,.eggs,scripts/*~

[metadata]
name = brz-debian
description = Build Debian packages from versioned sources
author = Breezy Developers
author_email = breezy-core@googlegroups.com
license = GNU GPL v2
url = https://code.breezy-vcs.org/breezy-debian

[options]
install_requires =
    pyyaml
    breezy>=3.3.0.dev.0
    debmutate[watch]>=0.60
    python_debian
    python-apt
    distro-info
packages =
    breezy.plugins.debian
    breezy.plugins.debian.tests
    breezy.plugins.debian.tests.blackbox
    breezy.plugins.debian.upstream
scripts =
    scripts/deb-auto-backport
    scripts/deb-import-uncommitted
    scripts/deb-move-orphaned
    scripts/deb-new-upstream
package_dir =
    breezy.plugins.debian=.

[options.entry_points]
console_scripts =
    deb-update-packaging=breezy.plugins.debian.update_packaging:main
    deb-vcs-up-to-date=breezy.plugins.debian.vcs_up_to_date:main
    deb-move-orphaned=breezy.plugins.debian.move_orphaned:main

[options.package_data]
breezy.plugins.debian = py.typed

[options.extras_require]
launchpad = launchpadlib
