[flake8]
exclude = build,.eggs,scripts/*~

[metadata]
name = brz-debian
description = Build Debian packages from versioned sources
author = Breezy Developers
author_email = breezy-core@googlegroups.com
license = GNU GPL v2
url = https://code.breezy-vcs.org/breezy-debian

[options]
python_requires >= 3.9
install_requires =
    pyyaml
    breezy>=3.3.0.dev.0
    debmutate[watch]>=0.60
    python_debian
    python-apt
    distro-info
packages =
    breezy.plugins.debian
    breezy.plugins.debian.tests
    breezy.plugins.debian.tests.blackbox
    breezy.plugins.debian.upstream
package_dir =
    breezy.plugins.debian=.

[options.entry_points]
console_scripts =
    deb-update-packaging=breezy.plugins.debian.update_packaging:main
    deb-vcs-up-to-date=breezy.plugins.debian.vcs_up_to_date:main
    deb-move-orphaned=breezy.plugins.debian.move_orphaned:main
    deb-import-uncommitted=breezy.plugins.debian.import_uncommitted:main
    deb-auto-backport=breezy.plugins.debian.auto_backport:main
    deb-new-upstream=breezy.plugins.debian.new_upstream:main
    deb-merge=breezy.plugins.debian.merge_package:main

[options.package_data]
breezy.plugins.debian = py.typed

[options.extras_require]
launchpad = launchpadlib
udd = psycopg2
