[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "vcsgraph"
version = "0.1.0"
description = "Graph algorithms for version control systems"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "patiencediff",
    "fastbencode",
]

[tool.setuptools]
packages = ["vcsgraph"]

[tool.setuptools-rust]
[[tool.setuptools-rust.ext-modules]]
target = "vcsgraph._graph_rs"
path = "crates/graph-py/Cargo.toml"
binding = "PyO3"