[package]
name = "bazaar"
version = { workspace = true }
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2018"
description = "Rust implementation of the Bazaar formats and protocols"
license = "GPL-2.0+"
homepage = "https://www.breezy-vcs.org/"
repository = "https://github.com/breezy-team/breezy"

[lib]

[dependencies]
breezy-osutils = { path = "../../crates/osutils", version = ">=3.3.4" }
lazy_static = "1.4.0"
regex = "1.3.1"
fancy-regex = ">=0.7"
chrono = { workspace = true }
bendy = "0.3"
xmltree = "0.11"
sha1 = "0.10"
tempfile = "3"
log = "0.4"
pyo3 = { version = ">=0.17", optional = true }
crc32fast = "1.2.0"
base64 = "0.22.1"
maplit = "1.0.2"
lazy-regex = "3.4.0"
byteorder = "1.5.0"
lru = "0.13.0"
flate2 = "1.0.28"
xz2 = "0.1.7"

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]
