[package]
name = "bazaar-py"
version = "3.3.3"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = ">=0.17, <0.19", features = ["extension-module", "chrono"]}
pyo3-file = { git = "https://github.com/omerbenamram/pyo3-file" }
bazaar = { path = "../bazaar", features=["pyo3"] }
chrono = ">= 0.4"
breezy-osutils = { path = "../osutils" }
bazaar-dirstate = { path = "../dirstate" }
