[package]
name = "bazaar-py"
version = "3.4.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bazaar = { path = "../bazaar", features=["pyo3"] }
pyo3 = { version = ">=0.19", features = ["extension-module", "chrono"]}
pyo3-file = { git = "https://github.com/breezy-team/pyo3-file" }
chrono = ">= 0.4"
breezy-osutils = { path = "../osutils" }
bazaar-dirstate = { path = "../dirstate" }
