[package]
name = "bazaar-py"
version = { workspace = true }
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bazaar = { path = "../bazaar", features=["pyo3"] }
pyo3 = { workspace = true, features = ["extension-module", "chrono"]}
pyo3-filelike = { workspace = true }
chrono = { workspace = true }
breezy-osutils = { path = "../osutils", features = ["pyo3"] }
