[package]
name = "bazaar"
version = "3.3.4"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2018"
description = "Rust implementation of the Bazaar formats and protocols"
license = "GPL-2.0+"
homepage = "https://www.breezy-vcs.org/"

[lib]

[dependencies]
breezy-osutils = { path = "../osutils", version = ">=3.3.4" }
lazy_static = "1.4.0"
regex = "1.3.1"
fancy-regex = ">=0.7"
chrono = "0.4"
bendy = "0.3"
xmltree = "0.10"
sha1 = "0.10"
tempfile = "3"
log = "0.4"

[target.'cfg(unix)'.dependencies]
nix = ">= 0.26"
