[package]
name = "bazaar"
version = { workspace = true }
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2018"
description = "Rust implementation of the Bazaar formats and protocols"
license = "GPL-2.0-or-later"
homepage = "https://www.breezy-vcs.org/"
repository = "https://github.com/breezy-team/breezy"

[lib]

[dependencies]
pyo3 = { workspace = true, optional = true }

[features]
default = []
pyo3 = ["dep:pyo3"]
