[package]
name = "bazaar-chk-map"
version = "3.4.0"
edition = "2018"
description = "The chk_map format used by Bazaar"
license = "GPL-2.0+"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]
homepage = "https://www.breezy-vcs.org/"
documentation = "https://www.breezy-vcs.org/doc/"

[lib]

[dependencies]
crc32fast = "1.2.0"
