[package]
name = "cmd-py"
version = { workspace = true }
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"]}
pyo3-filelike = { workspace = true }
breezy = { path = "../..", features = ["pyo3"] }
gettext-rs = { workspace = true }
log = { workspace = true, features=["std"]}
