[package]
name = "bazaar-dirstate"
version = "3.3.3"
edition = "2018"
description = "The dirstate format used by Bazaar"
license = "GPL-2.0+"
repository = "https://code.launchpad.net/brz"
homepage = "https://www.breezy-vcs.org/"
documentation = "https://www.breezy-vcs.org/doc/"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]

[lib]
