[package]
name = "breezy-git"
version = { workspace = true }
authors = ["Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2018"
description = "Git support for Breezy"
license = "GPL-2.0+"
homepage = "https://www.breezy-vcs.org/"

[lib]

[dependencies]
breezy-osutils = { path = "../osutils" }
breezy-urlutils = { path = "../urlutils" }
breezy = { path = "../.." }
