[package]
name = "breezy-graph"
version = "3.4.0"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
description = "Graph introspection"
license = "GPL-2.0+"
homepage = "https://www.breezy-vcs.org/"

[lib]

[dependencies]
lazy_static = "1.4.0"
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
maplit = "1.0.2"

[features]
pyo3 = ["dep:pyo3"]
