[package]
name = "breezy-osutils"
version = "3.3.3"
edition = "2021"
description = "Low level OS wrappers for Breezy"
license = "GPL-2.0+"

[lib]

[dependencies]
memchr = "2.3.3"
chrono = "0.4"
walkdir = "2"
sha1 = "0.10.1"
unicode-normalization = "0.1.19"
rand = "0.8"
log = "0.4"
lazy_static = "1.4.0"
regex = "1.5.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2.101"
