[package]
name = "breezy-transport"
version = "3.3.3"
edition = "2018"
description = "Transport layer for Breezy"
license = "GPL-2.0+"
repository = "https://code.launchpad.net/brz"
homepage = "https://www.breezy-vcs.org/"
documentation = "https://www.breezy-vcs.org/doc/"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]

[lib]

[dependencies]
breezy-osutils = { path = "../osutils" }
url = "2.2.2"
atomicwrites = "0.4"
pyo3 = { version = ">= 0.17, <0.19", optional = true }
pyo3-file = { git = "https://github.com/omerbenamram/pyo3-file", optional = true }
breezy-urlutils = { path = "../urlutils" }
path-clean = "1"
#[cfg(unix)]
nix = { version = "0.22" }
walkdir = "2.3"
#[cfg(unix)]
libc = "0.2"
log = "0.4"
lazy_static = "1.4"
byteorder = { version = "1", optional = true }

[features]
default = ["pyo3", "sftp"]
pyo3 = ["dep:pyo3", "dep:pyo3-file"]
sftp = ["dep:byteorder"]
