[package]
name = "breezy-transport"
version = "3.3.3"
edition = "2018"
description = "Transport layer for Breezy"
license = "GPL-2.0+"
repository = "https://code.launchpad.net/brz"
homepage = "https://www.breezy-vcs.org/"
documentation = "https://www.breezy-vcs.org/doc/"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]

[lib]

[dependencies]
byteorder = "1.3.2"
sftp = "0.2.0"
lazy_static = "1"
log = "0.4"
breezy-osutils = { path = "../osutils" }

[target.'cfg(unix)'.dependencies]
nix = ">=0.26"
