[package]
name = "breezy-transport"
version = "3.4.0"
edition = "2018"
description = "Transport layer for Breezy"
license = "GPL-2.0+"
repository = "https://code.launchpad.net/brz"
homepage = "https://www.breezy-vcs.org/"
documentation = "https://www.breezy-vcs.org/doc/"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>"]

[lib]

[dependencies]
breezy-osutils = { path = "../osutils" }
url = "2.2.2"
tempfile = "3"
pyo3 = { version = ">= 0.19", optional = true }
pyo3-file = { git = "https://github.com/breezy-team/pyo3-file", optional = true }
breezy-urlutils = { path = "../urlutils" }
path-clean = "1"
walkdir = "2.3"
lazy_static = "1"
sftp = { version = ">=0.2", optional = true }
log = "0.4"

[features]
default = ["pyo3", "sftp"]
pyo3 = ["dep:pyo3", "dep:pyo3-file"]

[target.'cfg(unix)'.dependencies]
nix = ">=0.26"
